; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ov5645.c_ov5645_set_agc_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_ov5645.c_ov5645_set_agc_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ov5645 = type { i32 }

@OV5645_AGC_MANUAL_ENABLE = common dso_local global i32 0, align 4
@OV5645_AEC_PK_MANUAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ov5645*, i64)* @ov5645_set_agc_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ov5645_set_agc_mode(%struct.ov5645* %0, i64 %1) #0 {
  %3 = alloca %struct.ov5645*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ov5645* %0, %struct.ov5645** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.ov5645*, %struct.ov5645** %3, align 8
  %8 = getelementptr inbounds %struct.ov5645, %struct.ov5645* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %5, align 4
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i32, i32* @OV5645_AGC_MANUAL_ENABLE, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* %5, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %5, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load i32, i32* @OV5645_AGC_MANUAL_ENABLE, align 4
  %19 = load i32, i32* %5, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %17, %12
  %22 = load %struct.ov5645*, %struct.ov5645** %3, align 8
  %23 = load i32, i32* @OV5645_AEC_PK_MANUAL, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @ov5645_write_reg(%struct.ov5645* %22, i32 %23, i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %21
  %29 = load i32, i32* %5, align 4
  %30 = load %struct.ov5645*, %struct.ov5645** %3, align 8
  %31 = getelementptr inbounds %struct.ov5645, %struct.ov5645* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  br label %32

32:                                               ; preds = %28, %21
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i32 @ov5645_write_reg(%struct.ov5645*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
